<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_book_normal"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBookPic"
                    android:layout_width="120dp"
                    android:layout_height="215dp"
                    android:contentDescription="@string/im_book"
                    android:src="@drawable/book" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/tvBookTitle"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:text="@string/book_title"
                        android:textColor="@color/lbl_name"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_author"
                            android:textColor="@color/lbl_name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvAuthorName"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_publisher"
                            android:textColor="@color/lbl_name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvPublisherName"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_price"
                            android:textColor="@color/lbl_name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvBookPrice"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_category"
                            android:textColor="@color/lbl_name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvCategoryName"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_published_at"
                            android:textColor="@color/lbl_name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvPublishingData"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/tvBookDetails"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/im_book"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:weightSum="30">

                <Button
                    android:id="@+id/btnAddToCart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="19"
                    android:background="@color/btn_login_bg"
                    android:text="@string/btn_buy"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="@color/input_login_hint" />

                    <EditText
                        android:id="@+id/etQuantity"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/input_quantity"
                        android:digits="123456789."
                        android:ems="3"
                        android:hint="@string/quantity"
                        android:inputType="numberDecimal"
                        android:padding="7dp"
                        android:singleLine="true"
                        android:text="@string/num_quantity"
                        android:textColor="@color/input_login"
                        android:textColorHint="@color/input_login_hint" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>